testsuite/tests/printing-types/pr248.ocaml.reference
val f : 'a -> 'b -> 'b = <fun>
val blah : '_weak1 -> '_weak1 = <fun>
val splash : unit -> '_weak1 = <fun>
val blurp : '_weak2 -> '_weak2 = <fun>
Line 4, characters 0-3:
4 | let g = f ();;
    ^^^
Error: Syntax error


Line 4, characters 0-3:
4 | let h = g (f ())
    ^^^
Error: Syntax error

